--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "s3-deploy": "^0.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "s3-deploy './build/**' --cwd './build/' --region us-east-1 --bucket jesse.cafarelli.io"
   }
 }
